--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -567,4 +567,7 @@ div.file_upload_wrapper:hover {
   .no-mobile {
     display: none;
   }
+  .row {
+    margin: 0;
+  }
 }
