--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -432,7 +432,7 @@
 	}
 }
 
-@media(max-width: 980px) {
+@media(max-width: 1200px) {
 	.container {
 		padding: 10px;
 	}
